# LAAS-quad-project

./: acados_ocp.json  acados_ocp_pendulum_ode.json  acados_sim.json  readme.txt
OCP-MPC_Acados/: acados_ocp.json  readme.md
OCP-MPC_Acados/ACADOS_examples/start/: pendulum_model.py
OCP-MPC_Acados/c_generated_code/: Makefile  acados_sim_solver_pendulum_ode.h  acados_sim_solver_quadrotor_ode.c  acados_solver_quadrotor_ode.c  acados_solver_quadrotor_ode.h  main_pendulum_ode.c  main_quadrotor_ode.c
OCP-MPC_Acados/c_generated_code/pendulum_ode_cost/: pendulum_ode_cost_y_0_fun.c  pendulum_ode_cost_y_e_hess.c  pendulum_ode_cost_y_fun_jac_ut_xt.c  pendulum_ode_cost_y_hess.c
OCP-MPC_Acados/c_generated_code/pendulum_ode_model/: pendulum_ode_impl_dae_fun_jac_x_xdot_u_z.c  pendulum_ode_impl_dae_jac_x_xdot_u_z.c
OCP-MPC_Acados/c_generated_code/quadrotor_ode_cost/: quadrotor_ode_cost_y_0_fun.c  quadrotor_ode_cost_y_0_fun_jac_ut_xt.c  quadrotor_ode_cost_y_0_hess.c  quadrotor_ode_cost_y_e_fun.c  quadrotor_ode_cost_y_e_fun_jac_ut_xt.c  quadrotor_ode_cost_y_e_hess.c  quadrotor_ode_cost_y_fun.c  quadrotor_ode_cost_y_fun_jac_ut_xt.c  quadrotor_ode_cost_y_hess.c
OCP-MPC_Acados/c_generated_code/quadrotor_ode_model/: quadrotor_ode_expl_ode_fun.c  quadrotor_ode_expl_vde_adj.c  quadrotor_ode_expl_vde_forw.c  quadrotor_ode_impl_dae_fun.c  quadrotor_ode_impl_dae_fun_jac_x_xdot_u.c  quadrotor_ode_impl_dae_jac_x_xdot_u_z.c  quadrotor_ode_model.h
OCP-MPC_Acados/project/: MPC_main.py  OCP_main.py  acados_ocp.json  common.py  drone_MPC_settings.py  drone_model.py  drone_ocp_settings.py  main.py  prova.py
OCP-MPC_Acados/project/c_generated_code/: Makefile  acados_solver_quadrotor_ode.h
OCP-MPC_Acados/quad/: visualize_mpl.py
OCP-MPC_Acados/quad/c_generated_code/: Makefile  main_drone_FrenSer.c
OCP-MPC_Acados_ROS2_Gazebo/ros2_ws/src/: README.md  acados_ocp.json
OCP-MPC_Acados_ROS2_Gazebo/ros2_ws/src/mrsim_gazebo_sim/: CMakeLists.txt  package.xml
OCP-MPC_Acados_ROS2_Gazebo/ros2_ws/src/mrsim_gazebo_sim/config/: bag_qos.yaml  bridge.yaml  bridge_offline.yaml  rviz_config_file.rviz
OCP-MPC_Acados_ROS2_Gazebo/ros2_ws/src/mrsim_gazebo_sim/launch/: drone_sim.launch.py
OCP-MPC_Acados_ROS2_Gazebo/ros2_ws/src/mrsim_gazebo_sim/models/mrsim-quad-unico/: model.config  model.sdf
OCP-MPC_Acados_ROS2_Gazebo/ros2_ws/src/mrsim_gazebo_sim/models/mrsim-quadrotor/: model.sdf
OCP-MPC_Acados_ROS2_Gazebo/ros2_ws/src/mrsim_gazebo_sim/models/peg/: model.sdf
OCP-MPC_Acados_ROS2_Gazebo/ros2_ws/src/mrsim_gazebo_sim/src/: mrsim_drone_ign_plugin.cpp  mrsim_peg_pose_ign_plugin.cpp
OCP-MPC_Acados_ROS2_Gazebo/ros2_ws/src/mrsim_gazebo_sim/worlds/: example.world
c_generated_code/: Makefile  acados_sim_solver.pxd  acados_sim_solver_pendulum_ode.c  acados_sim_solver_quadrotor_ode.c  acados_sim_solver_quadrotor_ode.h  acados_solver_pendulum_ode.c  acados_solver_pendulum_ode.h  acados_solver_quadrotor_ode.c  acados_solver_quadrotor_ode.h  main_quadrotor_ode.c  main_sim_quadrotor_ode.c
c_generated_code/pendulum_ode_cost/: pendulum_ode_cost_y_0_fun_jac_ut_xt.c  pendulum_ode_cost_y_0_hess.c  pendulum_ode_cost_y_e_fun.c  pendulum_ode_cost_y_e_fun_jac_ut_xt.c  pendulum_ode_cost_y_fun.c
c_generated_code/pendulum_ode_model/: pendulum_ode_impl_dae_fun.c  pendulum_ode_impl_dae_fun_jac_x_xdot_u.c  pendulum_ode_impl_dae_fun_jac_x_xdot_z.c
c_generated_code/quadrotor_ode_cost/: quadrotor_ode_cost_y_0_fun.c  quadrotor_ode_cost_y_0_fun_jac_ut_xt.c  quadrotor_ode_cost_y_0_hess.c  quadrotor_ode_cost_y_e_fun.c  quadrotor_ode_cost_y_e_fun_jac_ut_xt.c  quadrotor_ode_cost_y_e_hess.c  quadrotor_ode_cost_y_fun.c  quadrotor_ode_cost_y_fun_jac_ut_xt.c  quadrotor_ode_cost_y_hess.c
c_generated_code/quadrotor_ode_model/: quadrotor_ode_expl_ode_fun.c  quadrotor_ode_expl_vde_adj.c  quadrotor_ode_expl_vde_forw.c  quadrotor_ode_impl_dae_fun_jac_x_xdot_u_z.c  quadrotor_ode_impl_dae_fun_jac_x_xdot_z.c
docker/: Dockerfile  README.md  docker_build_image.sh  docker_run_container.sh
project/: MPC_main.py  acados_ocp.json  common.py  drone_model.py  drone_model_rpy.py  drone_ocp  drone_ocp.py  drone_ocp_settings.py  drone_simulation.py  main.py  planner.py  prova.py
project/c_generated_code/: Makefile  acados_sim_solver_quadrotor_ode.c  acados_solver_quadrotor_ode.c  main_quadrotor_ode.c  main_sim_quadrotor_ode.c
project/c_generated_code/quadrotor_ode_cost/: quadrotor_ode_cost_y_0_fun.c  quadrotor_ode_cost_y_0_fun_jac_ut_xt.c  quadrotor_ode_cost_y_e_fun.c  quadrotor_ode_cost_y_e_fun_jac_ut_xt.c  quadrotor_ode_cost_y_e_hess.c  quadrotor_ode_cost_y_fun.c  quadrotor_ode_cost_y_fun_jac_ut_xt.c
project/c_generated_code/quadrotor_ode_model/: quadrotor_ode_expl_ode_fun.c  quadrotor_ode_expl_vde_adj.c
quad/: main.py  planner_ocp.json
quad/c_generated_code/: acados_solver_drone_FrenSer.c
quad/c_generated_code/drone_FrenSer_constraints/: drone_FrenSer_constr_h_e_fun.c  drone_FrenSer_constr_h_e_fun_jac_uxt_zt.c
quad/c_generated_code/drone_FrenSer_cost/: drone_FrenSer_cost_y_e_hess.c  (+1 more)
start/: minimal_example_sim.py
(+70 files in other folders)
